add form and background image

--- a/index.html
+++ b/index.html
@@ -36,9 +36,57 @@
           <p>Stellar</p>
           <i class="ph-duotone ph-airplane-taxiing"></i>
         </button>
+        <i class="ph-duotone ph-cursor-click"></i>
       </section>
       <section class="reserve-bus-card" data-qa="reserve-bus-card">
-        <div class="form"></div>
+        <div class="form-div">
+          <div class="form-boxes">
+            <label for="from">From</label>
+            <select class="select" class="from" name="from" id="from">
+              <option value="CDMX">Ciudad de México</option>
+              <option value="Guadalajara">Guadalajara</option>
+              <option value="Monterrey">Monterrey</option>
+              <option value="Puebla">Puebla</option>
+              <option value="León">León</option>
+              <option value="Querétaro">Querétaro</option>
+              <option value="Toluca">Toluca</option>
+              <option value="Tijuana">Tijuana</option>
+              <option value="Mérida">Mérida</option>
+              <option value="San Luis Potosí">San Luis Potosí</option>
+              <option value="Saltillo">Saltillo</option>
+              <option value="Durango">Durango</option>
+            </select>
+          </div>
+          <div class="form-boxes">
+            <label for="to">To</label>
+            <select class="select" class="to" name="to" id="to">
+              <option value="CDMX">Ciudad de México</option>
+              <option value="Guadalajara">Guadalajara</option>
+              <option value="Monterrey">Monterrey</option>
+              <option value="Puebla">Puebla</option>
+              <option value="León">León</option>
+              <option value="Querétaro">Querétaro</option>
+              <option value="Toluca">Toluca</option>
+              <option value="Tijuana">Tijuana</option>
+              <option value="Mérida">Mérida</option>
+              <option value="San Luis Potosí">San Luis Potosí</option>
+              <option value="Saltillo">Saltillo</option>
+              <option value="Durango">Durango</option>
+            </select>
+          </div>
+          <div class="form-boxes">
+            <label for="passenger">Date</label>
+            <input type="date" name="date" id="date" />
+          </div>
+          <div class="form-boxes">
+            <label for="passengers">Passengers</label>
+            <input type="number" name="passengers" id="passengers" />
+          </div>
+          <div class="form-boxes">
+            <label for="name">Full name</label>
+            <input type="text" name="name" id="name" />
+          </div>
+        </div>
         <img
           src="./images/Joyful Woman with Smartphone.jpeg"
           alt="girl-smiling"
