Add tests for header and button styles

--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
       <section class="brand-options-menu" data-qa="brand-options-menu">
         <button class="brand-btn" data-qa="brand-btn">
           <p>Nova</p>
-          <i class="ph-duotone ph-rocket"></i>
+          <i data-qa="ph-rocket" class="ph-duotone ph-rocket"></i>
         </button>
         <button class="brand-btn" data-qa="brand-btn">
           <p>Vexel</p>
-          <i class="ph-duotone ph-bus"></i>
+          <i data-qa="ph-bus" class="ph-duotone ph-bus"></i>
         </button>
         <button class="brand-btn" data-qa="brand-btn">
           <p>Stellar</p>
-          <i class="ph-duotone ph-airplane-taxiing"></i>
+          <i
+            data-qa="ph-airplane-taxiingg"
+            class="ph-duotone ph-airplane-taxiing"
+          ></i>
         </button>
         <i class="ph-duotone ph-cursor-click"></i>
       </section>
