Add style by company with js

--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
     </header>
     <main>
       <section class="brand-options-menu" data-qa="brand-options-menu">
-        <button class="brand-btn" data-qa="brand-btn">
+        <button class="brand-btn nova-btn" data-qa="brand-btn">
           <p>Nova</p>
           <i data-qa="ph-rocket" class="ph-duotone ph-rocket"></i>
+          <i class="ph-duotone ph-rocket-launch hide"></i>
         </button>
-        <button class="brand-btn" data-qa="brand-btn">
+        <button class="brand-btn vexel-btn" data-qa="brand-btn">
           <p>Vexel</p>
           <i data-qa="ph-bus" class="ph-duotone ph-bus"></i>
+          <i class="ph-duotone ph-van hide"></i>
         </button>
-        <button class="brand-btn" data-qa="brand-btn">
+        <button class="brand-btn stellar-btn" data-qa="brand-btn">
           <p>Stellar</p>
           <i
             data-qa="ph-airplane-taxiingg"
             class="ph-duotone ph-airplane-taxiing"
           ></i>
+          <i class="ph-duotone ph-airplane-takeoff hide"></i>
         </button>
         <i class="ph-duotone ph-cursor-click"></i>
       </section>
