Add payment button

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             <label for="name">Full name</label>
             <input type="text" name="name" id="name" />
           </div>
+          <div class="form-boxes">
+            <button class="pay-btn brand-btn">
+              <p>pay with QuickPay</p>
+              <i class="ph-duotone ph-wallet"></i>
+            </button>
+          </div>
         </div>
         <img
           src="./images/Joyful Woman with Smartphone.jpeg"
