Add pay screen transition

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <input type="text" name="name" id="name" />
           </div>
           <div class="form-boxes">
-            <button class="pay-btn">
+            <button class="pay-btn pay-btn-card">
               <p>QuickPay</p>
               <i class="ph-duotone ph-wallet"></i>
             </button>
@@ -105,7 +105,7 @@
           class="image-card"
         />
       </section>
-      <section class="pay-section card-style form-div">
+      <section class="pay-section card-style form-div hide">
         <div class="secure-div">
           <p>Secure pay with QuickPay</p>
           <i class="ph-duotone ph-shield-check"></i>
